--- a/dev/edits.ipynb
+++ b/dev/edits.ipynb
@@ -6,19 +6,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"/home/m4rs/mr-github/lib/sequence-edits/src\")\n",
+    "from typing import Annotated, TypeVar, Generic\n",
+    "from pydantic import RootModel\n",
     "import sequence_edits as se"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['And', 'the', 'earth', 'was', 'without', 'form']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "edits1 = [se.models.Edit(type=\"insert\", idx=4), se.models.Edit(type=\"skip\", idx=6)]\n",
-    "edits2 = [se.models.Edit(type=\"insert\", idx=4), se.models.Edit(type=\"skip\", idx=6)]"
+    "edits = [\n",
+    "    se.Insert(idx=1, value='the'),\n",
+    "    se.Skip(idx=4)\n",
+    "]\n",
+    "xs = ['And',      'earth', 'was', 'without', 'no', 'form']\n",
+    "list(se.apply(edits, xs))\n",
+    "#  ['And', 'the', 'earth', 'was', 'without',       'form']"
    ]
   }
  ],
